Made scrollbar persistent to avoid shifting page content

--- a/ghostwriter/static/css/styles.css
+++ b/ghostwriter/static/css/styles.css
@@ -6,6 +6,10 @@
     GENERAL STYLES
 ----------------------------------------------------- */
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: 'Poppins', 'Font Awesome 5 Free', sans-serif;
   background: var(--main-bg-color);
